--- a/Template/Template.vcxproj.filters
+++ b/Template/Template.vcxproj.filters
@@ -126,6 +126,9 @@
     <ClCompile Include="..\src\Crate.cpp">
       <Filter>Game Objects</Filter>
     </ClCompile>
+    <ClCompile Include="..\src\Ramp.cpp">
+      <Filter>Game Objects</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\src\StartScene.h">
@@ -258,6 +261,9 @@
       <Filter>Game Objects</Filter>
     </ClInclude>
     <ClInclude Include="..\src\Crate.h">
+      <Filter>Game Objects</Filter>
+    </ClInclude>
+    <ClInclude Include="..\src\Ramp.h">
       <Filter>Game Objects</Filter>
     </ClInclude>
   </ItemGroup>
