Added ramp that can change. Added function to fill triangle. Added angle calculation for box.

--- a/Template/Template.vcxproj
+++ b/Template/Template.vcxproj
@@ -23,7 +23,7 @@
     <ProjectGuid>{EE7E35FB-54EC-438D-9F7E-0B418207EC9A}</ProjectGuid>
     <Keyword>Win32Proj</Keyword>
     <RootNamespace>Template</RootNamespace>
-    <WindowsTargetPlatformVersion>10.0.19041.0</WindowsTargetPlatformVersion>
+    <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
@@ -235,6 +235,7 @@
     <ClInclude Include="..\src\TextureManager.h" />
     <ClInclude Include="..\src\Transform.h" />
     <ClInclude Include="..\src\Util.h" />
+    <ClInclude Include="FillTriangle.h" />
   </ItemGroup>
   <ItemGroup>
     <None Include="..\README.md" />
