--- a/Template/imgui.ini
+++ b/Template/imgui.ini
@@ -1,10 +1,10 @@
 [Window][Debug##Default]
 Pos=175,95
-Size=400,400
+Size=32,35
 Collapsed=0
 
 [Window][Dear ImGui Demo]
-Pos=1,102
+Pos=-7,28
 Size=550,680
 Collapsed=0
 
@@ -104,8 +104,13 @@ Size=332,67
 Collapsed=0
 
 [Window][Controls]
-Pos=60,60
-Size=291,144
+Pos=104,3
+Size=340,282
+Collapsed=0
+
+[Window][Controls for Simulation]
+Pos=7,57
+Size=340,282
 Collapsed=0
 
 [Table][0xA43C3885,3]
